# maverik

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug-behaviour.md  documentation-typo.md  feature.md  help.md
examples/asset_manager_file_print/: main.cpp
examples/logger_fatal_error/: main.cpp
include/: AAssetManager.hpp  AAssetsManager.hpp  AGraphicalContext.hpp  ALogger.hpp  ARenderingContext.hpp  ASoftware.hpp  ASwapchain.hpp  ASwapchainContext.hpp  FileAsset.hpp  Utils.hpp  Version.hpp  Vertex.hpp  maverik.hpp  vulkan.hpp
include/vk/: AssetsManager.hpp  GraphicalContext.hpp  Logger.hpp  RenderingContext.hpp  Software.hpp  SwapchainContext.hpp  Utils.hpp  vulkan.hpp
include/xr/: AndroidPlatform.hpp  AssetsManager.hpp  GraphicalContext.hpp  Openxr-include.hpp  RenderingContext.hpp  Software.hpp  SwapchainContext.hpp
src/: AAssetManager.cpp  ASoftware.cpp  FileAsset.cpp  Version.cpp
src/common/: AAssetManager.cpp  AAssetsManager.cpp  ALogger.cpp  ARenderingContext.cpp  FileAsset.cpp  Utils.cpp  main.cpp
src/vk/: AssetsManager.cpp  GraphicalContext.cpp  Logger.cpp  RenderingContext.cpp  Software.cpp  SwapchainContext.cpp  Utils.cpp
src/xr/: AndroidPlatform.cpp  AssetsManager.cpp  GraphicalContext.cpp  RenderingContext.cpp  Software.cpp  SwapchainContext.cpp
